# FlowBP

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
configs/final/flux1/: flux1_draft_lv.yaml  flux1_drtune.yaml  flux1_flowbp_bridge.yaml  flux1_flowbp_lagrange.yaml  flux1_flowbp_sparse.yaml  flux1_leapalign.yaml  flux1_refl.yaml
configs/final/flux2/: flux2_klein_base_9b_draft_lv.yaml  flux2_klein_base_9b_drtune.yaml  flux2_klein_base_9b_flowbp_bridge.yaml  flux2_klein_base_9b_flowbp_lagrange.yaml  flux2_klein_base_9b_flowbp_sparse.yaml  flux2_klein_base_9b_leapalign.yaml  flux2_klein_base_9b_refl.yaml
configs/final/sd35/: sd3_5_draft_lv.yaml  sd3_5_drtune.yaml  sd3_5_flowbp_bridge.yaml  sd3_5_flowbp_lagrange.yaml  sd3_5_flowbp_sparse.yaml  sd3_5_leapalign.yaml  sd3_5_refl.yaml  sd3_5_refl_nodetach.yaml
flowbp/: train_flowbp_flux.py  train_flowbp_flux2.py  train_flowbp_sd35.py
flowbp/config/: flowbp.py  leapalign.py
flowbp/data_preprocess/: preprocess_flux2_embedding.py  preprocess_flux_embedding.py  preprocess_sd35_embedding.py
flowbp/dataset/: latent_flux_rl_datasets.py  latent_sd35_rl_datasets.py  prompt_flux2_dataset.py
flowbp/eval/: __init__.py  config.py  logging_wandb.py  metrics.py  offline_ckpt_eval.py
flowbp/eval/generation/: flux.py  flux2.py  sd35.py
flowbp/eval/rewards/: __init__.py  clip_scorer.py  geneval_scorer.py  hpsv2_scorer.py  hpsv3_scorer.py  imagereward_scorer.py  multi_scorer.py  pickscore_scorer.py  reward_ckpt_path.py  scorer.py  unifiedreward_scorer.py
flowbp/eval/runners/: online.py  online_flux2.py
flowbp/schedulers/: fm_euler_discrete_with_pred_x0.py
flowbp/trainers/: __init__.py
flowbp/trainers/common/: __init__.py  flowbp_lagrange_utils.py  jk_sampling.py  rollout_window.py
flowbp/utils/: checkpoint.py  communications_flux.py  dataset_utils.py  debug_utils.py  ema_utils.py  evaluation_functions.py  fsdp_util.py  hpsv2_transforms.py
scripts/finetune/: train_flux1.sh  train_flux2.sh  train_sd35.sh
scripts/preprocess/: preprocess_flux1_embeddings.sh  preprocess_flux2_embeddings.sh  preprocess_sd35_embeddings.sh
(+24 files in other folders)
